--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <base href="/">
         <noscript>No fun without JavaScript</noscript>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script src="node_modules/systemjs/dist/system.src.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.40/system.js"></script>
 
         <script>
             System.config({
